# GovTech-Hackathon-2026-Tierseuchen-Screener

./: .gitignore  NOTES.md  README.md  config.yaml  lindas-endpoint.md  pyproject.toml  test-upload.ttl
.github/workflows/: stanbarrows-push-laravel.yml  stanbarrows-sync-upstream.yml  upload-ttl.yml
_notebooks/: adis_basic_eda.ipynb  empres_i_basic_eda.ipynb  wahis_basic_eda.ipynb
code/backend/: PLAN-INTERPRETER.md  README-BACKEND.md  README-SCRAPER.md  README.md
code/backend/exporter/: adis_to_events.py
code/backend/interpreter/: Anbindung_BIT_LLM.ipynb  Request_LLM_Christian.ipynb  SystemPrompt.md  gen_schema.py  (+6 more)
code/frontend/: .env.example  README.md  SYNC.md  composer.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  schema.md
code/notebooks/: ADIS-SCHEMA.md  adis_basic_eda.ipynb  empres_i_basic_eda.ipynb  paff2md.ipynb  qa_mock_data.ipynb  unstructured_scraper_qa.ipynb  wahis_basic_eda.ipynb
data/export/: adis_events.csv
data/unstructured/: Sources
docs/: Anforderungen.md  Glossary.md  Onboarding_Renku.md  create_glossary.py  glossary.xlsx  links.csv  outbreak_pipeline.mermaid
docs/frontend/: filter-integration-brief.md
eda_notebooks/: adis_basic_eda.ipynb  empres_i_basic_eda.ipynb  wahis_basic_eda.ipynb
lindas/: merge.py  prompt_adapt-schema.md
notebooks/: adis_basic_eda.ipynb  wahis_basic_eda.ipynb
src/govtech_tierseuchen/: cli.py  gefluegelnews.py
tests/: test_csv_export.py  test_disease_pipeline.py  test_enrichment.py  test_gefluegelnews.py  test_incremental_pipeline.py  test_padi_web.py  test_rdf_export.py
(+217 files in other folders)
