[project]
name = "govtech-tierseuchen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.7.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
]

[project.scripts]
govtech-tierseuchen = "govtech_tierseuchen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.uv]
exclude-newer = "7 days"

[tool.pytest.ini_options]
pythonpath = ["src"]
